--- a/apps/navigation/tsconfig.json
+++ b/apps/navigation/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "ts-config/tsconfig.base",
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "global.d.ts"]
 }
